Added float metric values registration methods.
git-svn-id: https://masu.svn.sourceforge.net/svnroot/masu/trunk@156 5bdb5694-003a-4164-b60f-8fcef0365520