@@ -11,7 +11,6 @@ import jp.ac.osaka_u.ist.sel.metricstool.main.io.DefaultMessagePrinter;
 import jp.ac.osaka_u.ist.sel.metricstool.main.io.MessagePrinter;
 import jp.ac.osaka_u.ist.sel.metricstool.main.io.MessageSource;
 import jp.ac.osaka_u.ist.sel.metricstool.main.plugin.AbstractPlugin;
-import jp.ac.osaka_u.ist.sel.metricstool.main.plugin.ClassNamePluginComparator;
 import jp.ac.osaka_u.ist.sel.metricstool.main.plugin.MetricTypeAndNamePluginComparator;
 import jp.ac.osaka_u.ist.sel.metricstool.main.plugin.PluginManager;
 import jp.ac.osaka_u.ist.sel.metricstool.main.plugin.AbstractPlugin.PluginInfo;
@@ -78,7 +77,7 @@ public final class MethodMetricsInfo implements MessageSource {
      */
     public void putMetric(final AbstractPlugin key, final int value)
             throws MetricAlreadyRegisteredException {
-        this.putMetric(key, new Float(value));
+        this.putMetric(key, Float.valueOf(value));
     }
 
     /**
@@ -90,7 +89,7 @@ public final class MethodMetricsInfo implements MessageSource {
      */
     public void putMetric(final AbstractPlugin key, final float value)
             throws MetricAlreadyRegisteredException {
-        this.putMetric(key, new Float(value));
+        this.putMetric(key, Float.valueOf(value));
     }
 
     /**
